--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bot-battlr",
+  "name": "code-challenge-2-bot-battlr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
